# cmake-tutorial

./: CMakeLists.txt  PrintVariables.cmake  README.md  hello.cpp  hello.hpp  main.cpp
hello-exe/: CmakeLists.txt  main.cpp
say-hello/: CMakeLists.txt
say-hello/src/say-hello/: hello.cpp
